--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
                 </a>
             </section>
             <footer class="text-center col-12">
-                <img class="black-wolf" src="./black-wolf.png" alt="Black wolf logo" width="500" height="auto">
+                <img 
+                    class="black-wolf" 
+                    src="./black-wolf.png" 
+                    alt="Black wolf logo" 
+                    width="500" 
+                    height="auto">
             </footer>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
