--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                 <button class="btn btn-primary btn-xl">Find out more!</button>
                 </a>
             </section>
-            <footer class="text-center col-12">
+            <section class="text-center col-12">
                 <img 
                     class="black-wolf" 
                     src="./black-wolf.png" 
                     alt="Black wolf logo" 
                     width="500" 
                     height="auto">
-            </footer>
+            </section>
         </div>
     </div>
     <script src="script.js"></script>
