--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     width="500" 
                     height="auto">
             </section>
+            <section class="text-center col-12">
+                <h1>~      ~    ~ ~         ~   ~~ ~     ~ ~</h1>
+            </section>
         </div>
     </div>
     <script src="script.js"></script>
